Fixed scan to file and added tests